apps/hello-world/base/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-frontend
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "4"
  labels:
    app.kubernetes.io/name: hello-world-frontend
spec:
  selector:
    matchLabels:
      app: hello-world-frontend
  template:
    metadata:
      labels:
        app: hello-world-frontend

    spec:
      containers:
      - name: webserver-simple
        image: docker.io/kostiscodefresh/simple-web-app:3d9b390
        ports:
        - containerPort: 8080
