apps/hello-world/base/resources/ingressroute-authentik.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: hello-world-frontend
  namespace: dev
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
    argocd.argoproj.io/sync-wave: "5"
    cert-manager.io/cluster-issuer: route53-letsencrypt-production
    external-dns.alpha.kubernetes.io/target: dev.anotherlife.pl
    kubernetes.io/ingress.class: traefik-external
  labels:
    app.kubernetes.io/name: hello-world-frontend
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`hello.dev.anotherlife.pl`) && (PathPrefix(`/`))
      middlewares:
        - name: authentik
          namespace: traefik
      priority: 10
      services:
        - kind: TraefikService
          name: hello-world-frontend
          port: 80
    ## This part is only required for single-app setups
    - kind: Rule
      match: "Host(`hello.dev.anotherlife.pl`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
        - kind: Service
          # Or, to use an external Outpost, create an ExternalName service and reference that here.
          # See https://kubernetes.io/docs/concepts/services-networking/service/#externalname
          name: authentik-server
          port: 9000

  tls:
    domains:
      - main: dev.anotherlife.pl
        sans:
          - .dev.anotherlife.pl
    options:
      name: tls-ver13
      namespace: traefik
    secretName: letsencrypt-dev
    # stores:
    #   default:
    #     defaultCertificate:
    #       secretName: letsencrypt-dev
  #   stores:
  #     default: {}
